# zen404

./: .gitattributes  .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  README.md.bak  about.toml  pyproject.toml  sample_mistake_entry.json
.github/workflows/: ci.yml
.mise/: config.toml  tasks.toml
404zen/: Cargo.toml  README.md
404zen/fuckup/: main.rs
404zen/src/: lib.rs  main.rs  quicktype_transcript.rs
404zen/tests/: parse_quicktype_transcript.rs
404zen/xtask/: Cargo.toml
404zen/xtask/src/: main.rs
data/: all_nice_sounding_tracks.txt  audio_narrative_database.sql  audio_narrative_database.sqlite  female_narrative_selection.json  harmonise.md  male_narrative_selection.csv  narrative_arc_and_studio_setup.md  prompt.md  sp404.en.json3  sp404zen.webm  ssl_like_from_tarball_a.bak.md  ssl_like_from_tarball_a.md
data/processed/: merged_album_list.csv
data/tracklists/: HangTheDJ1_11.csv  HangTheDJ1_11a.csv  HangTheDJMore1_6.csv  HankTheDJ1_10.csv  HeckTheDJ_albums.csv  canon_electronic_artists_albums.csv
fuckup/: main.rs
listfetch/: csvload.py  listget.py
scripts/: LLM_MISTAKES_AND_EXCUSES.md  merge_album_lists.py  populate_db_from_merged_csv.py  populate_narrative_tracks.py
src/: lib.rs  main.rs  quicktype_transcript.rs
tests/: parse_quicktype_transcript.rs  yt_transcript.sample.json3
tests/schemas/: llm_mistake_report_schema.json
xtask/: Cargo.toml  main.rs  tasks.rs
xtask/src/: main.rs
