[workspace]
resolver = "2"
members = [
    ".", # Current package (zen404 library and binary)
    "xtask",
]

[package]
name = "zen404"
version = "0.1.0"
edition = "2021"
license = "ISC" # Specify the license

[lib]
name = "zen404"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
jsonschema = "0.17.1"
json_comments = "0.2" # Added for JSON3/JSONC parsing support
anyhow = "1.0.75"

[dev-dependencies]
rand = "0.8"

[profile.release]
lto = true
panic = "abort"

[profile.dev]
panic = "abort"

[[bin]]
name = "zen404"
path = "src/main.rs"

[[bin]]
name = "fuckup"
path = "fuckup/main.rs"
