[project]
name = "listfetch"
version = "0.1.0"
description = "Python scripts for fetching and processing tracklists."
dependencies = [
    "httpx>=0.20",
    "beautifulsoup4>=4.9",
    "pydantic>=1.8",
]
requires-python = ">=3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
dev = [
    "uv",
    "ruff",
    "ty",
    "pytest",
]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I"] # Basic Ruff checks

# Add [tool.ty] configurations here if needed based on astral-sh/ty documentation.
# For example:
# [tool.ty]
# strict = true
# check_untyped_defs = true
